Finished adding styling, fixed navbar issue on small screen

--- a/product/css/styles.css
+++ b/product/css/styles.css
@@ -22,7 +22,7 @@ html {
 body {
 	margin: 3em auto;
 	max-width: 70em;
-	font-family: "Helvetica", "Arial", sans-serif;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 	font-size: calc(15px * (25 - 15) * ((100vw - 320px) / (1200 - 320)));
 	line-height: calc(1.3em + (1.45 - 1.3) * ((100vw - 21em) / (70 - 21)));
 	text-rendering: optimizeLegibility;
@@ -64,13 +64,12 @@ section div h2 {
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
-	height: 3em;
+	height: 4em;
 	z-index: 9999;
 	border-bottom: 3px solid #BDBDBD;
 }
 
 #header #logo {
-	/*float: left;*/
 	margin: auto;
 	margin-top: 0;
 	margin-bottom: 0;
@@ -78,9 +77,11 @@ section div h2 {
 }
 
 #logo img {
-	display: block;
+	display: inline-block;
 	width: 10em;
+	height: 100%;
 	padding: 0.5em 1em 0.5em 0;
+	vertical-align: middle;
 }
 
 #nav-bar {
@@ -105,8 +106,8 @@ a, .btn {
 	border-radius: 0.75em;
 }
 
-a:hover, .btn:hover {
-	background: #FFE0B2;
+a:hover, #offers .btn:hover {
+	background: #FFE0B2 !important;
 	color: #FF5722 !important;
 	transform: scale(1.08);
 }
@@ -121,7 +122,7 @@ a:hover, .btn:hover {
 /*Thanks to Alohci for the answer: https://stackoverflow.com/questions/8366957/how-to-center-an-iframe-horizontally*/
 #instructions #video {
 	display: block;
-	width: calc(30em + (40 - 30) * ((100vw - 21em) / (70 - 21)));
+	width: calc(20em + (40 - 20) * ((100vw - 21em) / (70 - 21)));
 	height: 22em;
 	margin: 0 auto;
 }
@@ -178,7 +179,7 @@ a:hover, .btn:hover {
 	border: 1px solid #000;
 	border-radius: 0.5em;
 	overflow: hidden;
-	background: #BDBDBD;
+	background: #B2DFDB;
 }
 
 #offers .offer-desc {
@@ -187,20 +188,19 @@ a:hover, .btn:hover {
 	margin: 0;
 	padding: 2em 0 1em 0;
 	width: 100%;
-	text-transform: uppercase;
 	font-weight: 600;
-	letter-spacing: 0.05em;
 }
 
 #offers h2 {
 	margin: 0;
 	margin-top: 1em;
-	color: #00796B;
+	padding: 0.75em 0;
+	color: #FF5722;
+	font-size: 2em;
 }
 
 #offers ul {
 	margin: 0;
-	/*margin-top: 1em;*/
 	padding: 1em 0;
 }
 
@@ -214,32 +214,35 @@ a:hover, .btn:hover {
 #offers .btn {
 	border: 0;
 	margin: 1em 0;
-	font-weight: 600;
 	height: 2.66em;
-	text-transform: uppercase;
 	border-radius: 0.25em;
 	font-size: 1em;
 	padding: 0 1.33em;
-	letter-spacing: 0.05em;
+	background: #00796B;
+	color: #B2DFDB;
 }
 
 #footer {
-	/*position: relative;*/
 	display: block;
-	/*float: left;*/
 	bottom: 100%;
 	margin: 0 -9999rem;
 	margin-top: 1.66em;
 	padding: 0.66rem 9999rem;
+	font-size: 1.3em;
+	color: #B2DFDB;
 }
 
 #footer .container {
-	border: 1px solid black;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
 	bottom: 0;
 	text-align: center;
+}
+
+.uppercased {
+	text-transform: uppercase;
+	letter-spacing: 0.09em;
 }
 
 /*This fixes an issue with the navbar covering the sections when you jump to them using the anchor tags: 
@@ -252,7 +255,7 @@ section > [id]:before {
 	visibility: hidden;
 }
 
-@media screen and (max-width: 44em) {
+@media screen and (max-width: 60em) {
 	body {
 		margin: 0 auto;
 	}
@@ -260,31 +263,39 @@ section > [id]:before {
 	#header {
 		display: block;
 		position: relative;
-		left: 0;
-		right: 0;
-		margin: 0;
-		padding: 0;
-		height: auto;
 	}
 
 	#header #logo {
 		width: 100%;
 		border-right: none;
+		/*margin-bottom: 1.3em;*/
 	}
 
 	#logo img {
-		margin: 0 auto;
+		/*display: block;
+		margin: 0 auto;*/
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		padding: 0;
+		max-height: 80%;
 	}
 
 	#nav-bar {
 		position: relative;
 		text-align: center;
 		width: 80%;
+		padding-top: 4em;
 	}
 
 	#nav-bar a {
 		width: 100%;
-		margin: 0.3em 0;
+		margin: 0.3em auto;
+		background: #00796B;
+		color: #B2DFDB;
 	}
 
 	#content {
@@ -305,7 +316,7 @@ section > [id]:before {
 	}
 
 	#thumbnails .thumbnail:hover {
-		transform: scale(1.3);
+		transform: none;
 	}
 
 	#offers {
@@ -322,7 +333,7 @@ section > [id]:before {
 	#footer {
 		width: 100%;
 		margin: 0;
-		padding: 0;
+		padding: 0.66em 0;
 	}
 
 }
